tests/errors/errors/test6.c
цел а=1,б;
пусто ГЛАВНАЯ(int а)
{
    float а;
    а=4;
}